# imgengine

./: .gitignore  FastAPI_readme.md  README.md  docker_md.md  observability.md
docs/: good_bad.md  (+14 more)
imgengine/: CMakeLists copy.txt  CMakeLists.txt  api_data.txt  backpressure_removed.c  cmake-instructions.md  folder-structer.md  governance_check.sh  include_data.txt  src_data.txt
imgengine/api/v1/: img_api.h  img_buffer_utils.h  img_error.h  img_job.h  img_pipeline.h  img_pipeline_removed.h  img_plugin_api.h  img_types.h
imgengine/arch/: arch_interface.h  cpu_caps.h
imgengine/arch/x86_64/: cpu_detect.c
imgengine/bindings/python/: cffi_wrapper.py
imgengine/cli/: main.c
imgengine/cmake/: clang-format.cmake
imgengine/cmd/bench/: lat_bench.c
imgengine/include/api/: api_benchmark_internal.h  api_internal.h  api_job_internal.h  io_vtable.h
imgengine/include/arch/: arch_inrerface.h  arch_interface.h  cpu_caps.h  resize_params.h  spec_barrier.h
imgengine/include/cold/: debug.h  error.h  validation.h
imgengine/include/core/: arch_interface.h  buffer.h  context_internal.h  opcodes.h  pipeline_types.h  result.h  time.h
imgengine/include/hot/: batch_exec.h  pipeline_exec.h  pipeline_exec_inline.h  pipeline_threaded.h  pixel_ops.h
imgengine/include/imgengine/: api.h  border.h  common.h  context.h  crop.h  error.h  image.h  io.h  layout.h  memory_pool.h  resize.h
imgengine/include/io/: io_vfs.h  remote_fetch.h  streaming_decoder.h  streaming_decoder_internal.h  zero_copy_contract.h
imgengine/include/memory/: arena.c  arena.h  hugepage.h  memory.h  numa.h  poison.h  slab.h  slab_internal.h
imgengine/include/observability/: binlog.h  binlog_fast.h  events.h  logger.h  metrics.h  profiler.h  tracepoints.h  tracing.h
imgengine/include/pipeline/: batch.h  batch_exec.h  border.h  canvas.h  engine.h  fused_kernel.h  fused_params.h  fusion_registry.h  generated.h  hardware_registry.h  job.h  job_presets.h  job_templates.h  jump_table.h  kernel_adapter.h  layout.h  layout_grid_internal.h  layout_resize_internal.h  pipeline.h  pipeline_compiled.h  pipeline_fused.h  pipeline_signature.h  pipeline_types.h  render_cache.h
imgengine/include/plugins/: plugin_crop.h  plugin_internal_removed.h  plugin_resize.h
imgengine/include/runtime/: affinity.c  affinity.h  backpressure.h  benchmark_hot.h  buffer_lifecycle.h  cluster_registry.h  exec_router.h  job_exec.h  per_core.h  plugin_loader.h  queue_internal.h  queue_mpmc.h  queue_spsc.h  rpc_client.h  rpc_protocol.h  scheduler.h  task.h  worker.c  worker.h
imgengine/include/security/: bounds_check.h  guard.h  input_validator.h  poision.h  sandbox.h
imgengine/io/decoder/: decoder_entry.c  decoder_entry.h  stb_bridge.c
imgengine/memory/: arena.h  numa.c  numa.h  slab.h
imgengine/pipeline/: batch.h  engine.c  engine.h  hardware_registry.c  hardware_registry.h  jump_table.c  jump_table.h  pipeline.h  scheduler.c
imgengine/plugins/: plugin_crop.c  plugin_crop.h  plugin_grayscale.c  plugin_internal.h  plugin_registry.c  plugin_resize.c  plugin_resize.h
imgengine/runtime/: affinity.c  task.h  worker.c  worker.h
imgengine/scripts/: bench_mark.py  check_headers.py  how_to_run.md  l10plus.md  l10plusplus.py
imgengine/src/api/: api.c  api_benchmark_hot.c  api_decode_secure.c  api_encoded.c  api_init.c  api_init_engine.c  api_init_workers.c  api_job_begin.c  api_job_decode_input.c  api_job_finish_output_pdf.c  api_job_finish_stage.c  api_job_postfx.c  api_job_prepare_render_stage.c  api_job_render_output.c  api_job_run.c  api_process_common.c  api_process_fast_pipeline.c  api_process_raw_decode.c  api_process_raw_encode.c  api_process_raw_free_buffer.c  api_process_raw_prepare.c  api_shutdown_workers.c
imgengine/src/arch/: cpu_caps.c
imgengine/src/cold/: debug.c  error.c  pipeline_compiled.c  validation.c  validation.h
imgengine/src/core/: batch_builder.c  buffer_lifecycle.c  config.c  context.c  dispatcher.h  image.c  img_pipeline.c  init.c  init.h  memory_pool.c
imgengine/src/hot/: batch_engine.c  batch_engine_removed.c  batch_engine_removed.h  batch_exec.c  batch_removed.h  pipeline_exec.c  pipeline_exec.h  pipeline_threaded.c  pixel_ops.h
imgengine/src/io/: image_io.c  io_register.c
imgengine/src/layout/: auto_fit.c  crop_marks.c  grid_layout.c
imgengine/src/memory/: arena.c  hugepage.c  numa.c  slab.c  slab_hot.c
imgengine/src/observability/: binlog.c  logger.c  metrics.c  profiler.c  tracing.c
imgengine/src/ops/: border.c  crop.c  resize.c
imgengine/src/pipeline/: batch_exec.c  bleed.c  border.c  canvas.c  canvas_alloc_buffer.c  canvas_fill_background.c  canvas_free_buffer.c  crop_marks.c  engine.c  fused_dispatch.c  fused_kernels.c  fused_kernels.inc  fused_registry.c  generated.c  hardware_registry.c  jump_table.c  layout.c  layout_grid.c  layout_grid_alloc_cells.c  layout_grid_place_cells.c  layout_grid_prepare_scaled.c  layout_prepare_fill.c  layout_prepare_fit.c  layout_prepare_fit_commit.c  layout_resize_bilinear.c  layout_resize_resample_bilinear.c  layout_resize_validate_alloc.c  pipeline_build.c  pipeline_executor.c  pipeline_fuse.c  pipeline_signature.c  plugin_runner.c  scheduler.c  scheduler.h
imgengine/src/plugins/: bleed_plugin.c  crop_plugin.c  pdf_plugin.c  plugin_bleed.c  plugin_crop.c  plugin_grayscale.c  plugin_pdf.c  plugin_registry.c  plugin_resize.c  registers_all.c
imgengine/src/runtime/: affinity.c  benchmark_hot.c  cluster_registry.c  exec_router.c  job_finish_stage.c  job_postfx.c  job_prepare_render_stage.c  job_run_compiled_pipeline.c  plugin_loader.c  queue_mpmc.c  queue_spsc.c  raw_buffer_release.c  rpc_client.c  rpc_server.c  scheduler.c  scheduler_destroy.c  scheduler_init.c  scheduler_submit.c  worker.c  worker_loop.c
imgengine/src/security/: fuzz_hooks.c  input_validator.c  sandbox.c
imgengine/src/startup/: engine_init.c
imgengine/src/tests/: verify_generated_registration.c
imgengine/src/tools/: binlog_decode.c
imgengine/tests/e2e/: cli_suite.sh
imgengine/tests/fuzz/: target_decoder.c
imgengine/tests/integration/: test_pipeline.c  test_plugin_runner.c
(+138 files in other folders)
